ajout d'une slide de récap

--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -50,6 +50,10 @@ body::after {
     transform: scale(.5);
 }
 
+.reveal ul {
+    list-style-type: none;
+}
+
 .light h2 {
     color: var(--r-background-color);
     -webkit-text-stroke: 2px black;
@@ -149,4 +153,8 @@ img {
     transform: rotate(18deg);
     z-index: -1;
     width: 435px;
+}
+
+.blur {
+    filter: blur(4px);
 }
